@@ -158,27 +158,20 @@
 	</dependencyManagement>
 
 	<build>
-		<pluginManagement>
-			<plugins>
+		<plugins>
 
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>${version-maven-compiler-plugin}</version>
-					<configuration>
-						<source>${version-java-source}</source>
-						<target>${version-java-target}</target>
-						<encoding>UTF-8</encoding>
-						<compilerArgs>
-							<arg>-Xlint:unchecked</arg>
-							<arg>--add-modules</arg>
-							<arg>jakarta.persistence</arg>
-						</compilerArgs>
-					</configuration>
-				</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${version-maven-compiler-plugin}</version>
+				<configuration>
+					<source>${version-java-source}</source>
+					<target>${version-java-target}</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 
-			</plugins>
-		</pluginManagement>
+		</plugins>
 	</build>
 
 	<profiles>
